--- a/.github/workflows/video_editing_scheduler.yml
+++ b/.github/workflows/video_editing_scheduler.yml
@@ -4,12 +4,11 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '30 9 * * *'   # Runs at 3:00 PM IST
-    # - cron: '30 14 * * *'  # Runs at 8:00 PM IST
+    - cron: '30 14 * * *'  # Runs at 8:00 PM IST
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
-    timeout-minutes: 120
     steps:
       # Checkout the repository
       - name: Checkout Code
